加入备案，启用ai123.ai

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
 
+main_plugin = python
 socket = 127.0.0.1:9090
-chdir = /home/pyprojects/ai123/
+chdir = /var/www/html/ai123/
 wsgi-file = ai123/wsgi.py
 master = true
 processes = 2
